--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,7 +5,6 @@
 
 .main .card {
     background: rgb(250, 250, 250, .6);
-    /* height: 90vh; */
     border-radius: 1rem;
     min-width: 38rem;
 }
@@ -20,7 +19,8 @@
     display: flex;
 }
 
-.contat-info .top {
+.contat-info .top,
+.chat .top {
     height: 6rem;
     display: grid;
     place-items: center;
@@ -129,6 +129,75 @@
 
 
 /* CHAT */
-/* .chat {
-       height: 90vh;
-} */
+.chat {
+    width: 90rem;
+    position: relative;
+    /* display: flex;
+       flex-direction: column;
+       justify-content: space-between; */
+}
+
+.chat .top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 5rem;
+}
+
+.chat .top .chat-contact-info {
+    display: flex;
+    align-items: center;
+}
+
+.chat .top .chat-contact-info img {
+    width: 3rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
+.chat .chat-conversation {
+    background: var(--white);
+    height: calc(100% - 14rem);
+}
+
+.chat .bottom {
+    height: 8rem;
+    display: grid;
+    place-items: center;
+    border-top: .1rem solid var(--light-blue);
+    font-size: 1.8rem;
+    font-weight: 600;
+    color: var(--gray);
+    letter-spacing: .1rem;
+}
+
+
+@keyframes bounce {
+    0%, 80%, 100% {
+      transform: scale(0);
+    }
+    40% {
+      transform: scale(1);
+    }
+  }
+
+  .loading {
+    display: flex;
+    align-items: center;
+  }
+  .dot {
+    width: .6rem;
+    height: .6rem;
+    background-color: var(--primary);
+    border-radius: 50%;
+    margin: 0 5px;
+    animation: bounce 1.5s infinite ease-in-out;
+  }
+
+  .dot:nth-child(2) {
+    animation-delay: 0.2s;
+  }
+
+  .dot:nth-child(3) {
+    animation-delay: 0.4s;
+  }
