--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,7 +2,7 @@
   --white: #fff;
   --primary: #213b86;
   --secondary: #431657;
-  --light-primary: #95b0dc;
+  --light-primary: #7a9acd;
   --light-secondary: #8776c3;
   --light-blue: #c5d4eb;
   --light-pink: #f5c5d3;
