--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -158,7 +158,7 @@
     flex-direction: column;
 }
 .chat .chat-conversation .message-bubble{
-    background: var(--primary);
+    background: var(--light-primary);
     color: var(--white);
     padding: 1rem;
     border-radius: 1rem;
@@ -166,11 +166,12 @@
     position: relative;
     display: inline-block;
     max-width: 60rem;
+    align-self: flex-start;
 }
 .chat .chat-conversation .message-bubble::before {
     content: " ";
     position: absolute;
-    background-color: var(--primary);
+    background-color: var(--light-primary);
     width: 1rem;
     height: 2rem;
     bottom: -.9rem;
@@ -178,12 +179,12 @@
     transform: rotate(60deg);
     transition: var(--tran-03);
 }
-.chat .chat-conversation .message-bubble.you{
+.chat .chat-conversation .message-bubble.viewer{
     background: var(--light-secondary);
     align-self: flex-end;
     color: var(--white);
 }
-.chat .chat-conversation .message-bubble.you::before {
+.chat .chat-conversation .message-bubble.viewer::before {
     background-color: var(--light-secondary);
     right: 3rem;
     left: inherit;
