Chat fixes DONE

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -168,6 +168,9 @@
     max-width: 60rem;
     align-self: flex-start;
 }
+.chat .chat-conversation .message-bubble:nth-last-child(1){
+    margin-bottom: 5rem;
+}
 .chat .chat-conversation .message-bubble::before {
     content: " ";
     position: absolute;
