--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -258,6 +258,28 @@
     background: var(--secondary);
 }
 
+.chat .message-bubble .project-image {
+    width: 100%;
+    border-radius: .5rem;
+    margin-bottom: 1rem;
+}
+
+.chat .message-bubble .project-button{
+    border: none;
+    width: 100%;
+    height: 4rem;
+    border-radius: .2rem;
+    background: var(--white);
+    color: var(--secondary);
+    font-weight: 600;
+    cursor: pointer;
+    transition: var(--tran-03);
+}
+.chat .message-bubble .project-button:hover{
+    background: var(--secondary);
+    color: var(--white);
+}
+
 
 @keyframes bouncing {
 
