--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,7 +6,7 @@
 .main .card {
     background: rgb(250, 250, 250, .6);
     border-radius: 1rem;
-    min-width: 38rem;
+    min-width: 35rem;
 }
 
 /* CONTACT INFO */
@@ -70,7 +70,7 @@
     flex-direction: column;
     align-items: center;
     color: var(--gray);
-    transition: var(--tran-03);
+    transition: var(--tran-04);
 }
 
 .social-container .sn-element {
@@ -81,7 +81,7 @@
     height: 3.5rem;
     display: grid;
     place-items: center;
-    transition: var(--tran-03);
+    transition: var(--tran-04);
 }
 
 .social-container p {
@@ -146,17 +146,18 @@
     margin-right: 1rem;
 }
 
-.chat .top .clear-chat-button{
+.chat .top .clear-chat-button {
     border: none;
     background: var(--white);
     color: var(--secondary);
     padding: .5rem 1rem;
     cursor: pointer;
     border-radius: .4rem;
-    transition: var(--tran-03);
+    transition: var(--tran-04);
     opacity: .6;
 }
-.chat .top .clear-chat-button:hover{
+
+.chat .top .clear-chat-button:hover {
     background: var(--secondary);
     color: var(--white);
 }
@@ -172,8 +173,10 @@
     padding: 0 3rem;
     display: flex;
     flex-direction: column;
+    transition: var(--tran-04);
 }
-.chat .chat-conversation .message-bubble{
+
+.chat .chat-conversation .message-bubble {
     background: var(--light-primary);
     color: var(--white);
     padding: 2rem;
@@ -184,9 +187,11 @@
     max-width: 60rem;
     align-self: flex-start;
 }
-.chat .chat-conversation .message-bubble:nth-last-child(1){
+
+.chat .chat-conversation .message-bubble:nth-last-child(1) {
     margin-bottom: 5rem;
 }
+
 .chat .chat-conversation .message-bubble::before {
     content: " ";
     position: absolute;
@@ -196,24 +201,26 @@
     bottom: -.9rem;
     left: 3rem;
     transform: rotate(60deg);
-    transition: var(--tran-03);
+    transition: var(--tran-04);
 }
-.chat .chat-conversation .message-bubble.viewer{
+
+.chat .chat-conversation .message-bubble.viewer {
     background: var(--light-secondary);
     align-self: flex-end;
     color: var(--white);
 }
+
 .chat .chat-conversation .message-bubble.viewer::before {
     background-color: var(--light-secondary);
     right: 3rem;
     left: inherit;
     transform: rotate(120deg);
-    transition: var(--tran-03);
+    transition: var(--tran-04);
 }
 
 .typing-loading {
-   font-size: 1.2rem;
-   font-weight: 400;
+    font-size: 1.2rem;
+    font-weight: 400;
 }
 
 .chat .bottom {
@@ -224,6 +231,7 @@
     font-size: 1.8rem;
     display: flex;
     justify-content: space-around;
+    transition: var(--tran-04);
 }
 
 .chat .bottom .input-bubble {
@@ -236,8 +244,9 @@
     font-weight: 600;
     margin-bottom: .5rem;
     cursor: pointer;
-    transition: var(--tran-03);
+    transition: var(--tran-04);
 }
+
 .chat .bottom .input-bubble::before {
     content: " ";
     position: absolute;
@@ -247,13 +256,14 @@
     top: 65%;
     left: 86%;
     transform: rotate(50deg);
-    transition: var(--tran-03);
+    transition: var(--tran-04);
 }
 
 .chat .bottom .input-bubble:hover {
     background: var(--secondary);
     color: var(--white);
 }
+
 .chat .bottom .input-bubble:hover::before {
     background: var(--secondary);
 }
@@ -264,21 +274,117 @@
     margin-bottom: 1rem;
 }
 
-.chat .message-bubble .project-button{
+.chat .message-bubble .project-button {
     border: none;
     width: 100%;
     height: 4rem;
-    border-radius: .2rem;
+    border-radius: .5rem;
     background: var(--white);
     color: var(--secondary);
     font-weight: 600;
     cursor: pointer;
-    transition: var(--tran-03);
+    transition: var(--tran-04);
 }
-.chat .message-bubble .project-button:hover{
+
+.chat .message-bubble .project-button:hover {
     background: var(--secondary);
     color: var(--white);
 }
+
+.chat .bottom .bottom-actions {
+    display: none;
+}
+
+.chat .bottom .bottom-actions button {
+    font-family: 'Montserrat';
+    width: 19.5rem;
+    margin: .5rem 0;
+    border: none;
+    padding: .5rem 3rem;
+    border-radius: .5rem;
+    background: var(--light-secondary);
+    color: var(--white);
+    font-weight: 500;
+    font-size: 1.8rem;
+    letter-spacing: 0;
+    cursor: pointer;
+    transition: var(--tran-04);
+}
+.chat .bottom .bottom-actions button:hover{
+    background: var(--white);
+    color: var(--secondary);
+}
+/* Mobile Media Queries */
+
+@media screen and (max-width: 83rem) {
+    .main {
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+    }
+
+    .contat-info,
+    .clear-chat-button {
+        display: none;
+    }
+
+    .chat {
+        width: 90%;
+        height: 85vh;
+        margin-top: 2.5rem;
+        position: fixed;
+    }
+
+    .chat .chat-conversation.bottom-open {
+        height: 25rem;
+    }
+
+    .chat .bottom.open {
+        height: 30rem;
+        display: flex;
+        flex-direction: column;
+        padding: 2rem 0;
+    }
+
+    .chat .bottom .input-bubble {
+        display: none;
+    }
+
+    .chat .bottom.open .input-bubble {
+        display: block;
+    }
+
+    .chat .bottom .input-bubble {
+        width: 16rem;
+        text-align: center;
+    }
+    .chat .bottom.open .bottom-actions{
+        margin-bottom: 2rem;
+    }
+    .chat .bottom .bottom-actions,
+    .chat .bottom .bottom-actions .bottom-actions-close {
+        transition: var(--tran-05);
+        display: block;
+    }
+
+    .chat .bottom .bottom-actions .bottom-actions-open,
+    .chat .bottom.open .bottom-actions .bottom-actions-close {
+        display: none;
+    }
+
+    .chat .bottom.open .bottom-actions .bottom-actions-open {
+        display: flex;
+        flex-direction: column;
+    }
+
+   
+}
+
+/* @media screen and (width >= 1000rem) {
+    .contat-info {
+        display: none;
+    }
+}  */
 
 
 @keyframes bouncing {
