--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -400,9 +400,65 @@
         flex-direction: column;
     }
 
-
 }
 
+.project-modal{
+    position: absolute;
+    background: var(--white);
+    content: " ";
+    width: .1%;
+    height: .1%;
+    bottom: 8.4rem;
+    left: 0;
+    z-index: 2;
+    border-radius: 1rem;
+    transition: var(--tran-05);
+    opacity: 0;
+    overflow-y: scroll;
+}
+.project-modal .modal-content{
+    display: none;
+    opacity: 0;
+    transform: var(--tran-05);
+}
+
+.project-modal.show {
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    left: none;
+    
+}
+.project-modal.show .modal-content{
+    padding: 2rem 3rem;
+    display: block;
+    opacity: 1;    
+}
+
+.project-modal.show .modal-content .project-features{
+    display: flex;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 1.5rem;
+    margin-left: 2rem;
+    max-width: 70rem;
+    
+}
+.project-modal.show .modal-content .project-features .feature{
+    margin-top: 1.5rem;
+}
+.project-modal.show .modal-content .project-features .feature .feature-images{
+    margin-top: 1rem;
+    display: flex;
+    flex-wrap: wrap ;
+    gap: 2rem;
+}
+
+.project-modal.show .modal-content .project-features .feature .feature-images img{
+    width: 18rem;
+}
 /* @media screen and (width >= 1000rem) {
     .contat-info {
         display: none;
