--- a/src/styles/chat.css
+++ b/src/styles/chat.css
@@ -373,3 +373,39 @@
 
 }
 
+
+@keyframes bouncing {
+
+    0%,
+    80%,
+    100% {
+        transform: scale(0);
+    }
+
+    40% {
+        transform: scale(1);
+    }
+}
+
+.typing-loading {
+    display: flex;
+    align-items: center;
+    color: var(--secondary);
+}
+
+.dot {
+    width: .3rem;
+    height: .3rem;
+    background-color: var(--secondary);
+    border-radius: 50%;
+    margin: 0 5px;
+    animation: bouncing 1.5s infinite ease-in-out;
+}
+
+.dot:nth-child(2) {
+    animation-delay: 0.2s;
+}
+
+.dot:nth-child(3) {
+    animation-delay: 0.4s;
+}
